k8s-app-kustomize/environments/dev/service-dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30050
